syntax = "proto3";
package messages;

message HorustMsgMessage {
  oneof request_type {
    HorustMsgServiceStatusRequest status_request = 1;
    HorustMsgServiceStatusResponse status_response = 2;
    HorustMsgServiceChangeRequest change_request = 3;
  }
}
message HorustMsgError {

}

message HorustMsgServiceStatusRequest {
  string service_name = 1;
}

message HorustMsgServiceStatusResponse {
  string service_name = 1;
  HorustMsgServiceStatus service_status = 2;
}

message HorustMsgServiceChangeRequest {
  string service_name = 1;
  HorustMsgServiceStatus service_status = 2;
}

// return the current status - similar to HorustServiceStatusReponse.
message HorustMsgServiceChangeResponse {
  string service_name = 1;
  HorustMsgServiceStatus service_status = 2;
}

enum HorustMsgServiceStatus {
  STOPPED = 0;
  STARTED = 1;
  KILLED = 2;
  SHUTTING_DOWN = 3;
  RUNNING = 4;
}
